--- a/app/views/admin/categories/edit.phtml
+++ b/app/views/admin/categories/edit.phtml
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col s6 m6 l6" style="margin-top: -30px">
         <h5 class="teal-text">
-            Редактировать категориюf
+            Редактировать категорию
         </h5>
     </div>
 </div>
