--- a/app/views/admin/instructors/edit.phtml
+++ b/app/views/admin/instructors/edit.phtml
@@ -1,67 +1,70 @@
 <?php
-use app\models\Teachers;
+    use app\models\Teachers;
 ?>
 <div class="row">
     <div class="col s8 m8 l8" style="margin-top: -30px">
         <h5 class="teal-text">
-            Добавить нового преподователя/инструктора
+            Редактировать данные преподователя/инструктора
         </h5>
     </div>
 </div>
 <hr>
 <div class="row">
-    <form class="col s12 add-news-form" action="/admin/instructors/add" method="post">
+    <form class="col s12 add-news-form" action="/admin/instructors/edit" method="post">
+        <input type="hidden" id="tstat" value="" name="tstat">
+
         <div class="row" style="margin-bottom: 50px">
             <div class="col s12 input-field">
                 <p>
-                    <input name="profStatus" type="radio" id="instructor" value="instructor" checked/>
+                    <input name="profStatus" type="radio" id="instructor" value="instructor" <?= $teacher->profStatus == 'instructor' ? ' checked ' : '' ?> />
                     <label for="instructor"> <?= Teachers::STATUS_INSTRUCTOR ?></label>
                 </p>
                 <p>
-                    <input name="profStatus" type="radio" id="teacher" value="teacher"/>
+                    <input name="profStatus" type="radio" id="teacher" value="teacher" <?= $teacher->profStatus == 'teacher' ? ' checked ' : '' ?> />
                     <label for="teacher"><?= Teachers::STATUS_TEACHER ?></label>
                 </p>
             </div>
         </div>
 
+
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Имя" id="firstname" name="firstname" type="text" class="validate <?= (isset($errors['firstname'])) ? ' invalid' : '' ?>">
+                <input placeholder="Имя" value="<?= $teacher->firstname ?>" id="firstname" name="firstname" type="text" class="validate <?= (isset($errors['firstname'])) ? ' invalid' : '' ?>">
                 <label for="firstname" data-error="<?= (isset($errors['firstname'])) ? $errors['firstname'] : '' ?>">Имя</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Фамилия" id="lastname" name="lastname" type="text" class="validate <?= (isset($errors['lastname'])) ? ' invalid' : '' ?>">
+                <input placeholder="Фамилия" value="<?= $teacher->lastname ?>" id="lastname" name="lastname" type="text" class="validate <?= (isset($errors['lastname'])) ? ' invalid' : '' ?>">
                 <label for="lastname" data-error="<?= (isset($errors['lastname'])) ? $errors['lastname'] : '' ?>">Фамилия</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Возраст" id="age" name="age" type="number" class="validate <?= (isset($errors['age'])) ? ' invalid' : '' ?>">
+                <input placeholder="Возраст" value="<?= $teacher->age ?>" id="age" name="age" type="number" class="validate <?= (isset($errors['age'])) ? ' invalid' : '' ?>">
                 <label for="age" data-error="<?= (isset($errors['age'])) ? $errors['age'] : '' ?>">Возраст</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Машина" id="car" name="car" type="text" class="validate <?= (isset($errors['car'])) ? ' invalid' : '' ?>">
+                <input placeholder="Машина" value="<?= $teacher->car ?>" id="car" name="car" type="text" class="validate <?= (isset($errors['car'])) ? ' invalid' : '' ?>">
                 <label for="car" data-error="<?= (isset($errors['car'])) ? $errors['car'] : '' ?>">Машина</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Телефон" id="phone" name="phone" type="text" class="validate <?= (isset($errors['phone'])) ? ' invalid' : '' ?>">
+                <input placeholder="Телефон" value="<?= $teacher->phone ?>" id="phone" name="phone" type="text" class="validate <?= (isset($errors['phone'])) ? ' invalid' : '' ?>">
                 <label for="phone" data-error="<?= (isset($errors['phone'])) ? $errors['phone'] : '' ?>">Телефон</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12">
-                <input placeholder="Email" id="email" name="email" type="text" class="validate <?= (isset($errors['email'])) ? ' invalid' : '' ?>">
+                <input placeholder="Email" value="<?= $teacher->email ?>" id="email" name="email" type="text" class="validate <?= (isset($errors['email'])) ? ' invalid' : '' ?>">
                 <label for="email" data-error="<?= (isset($errors['email'])) ? $errors['email'] : '' ?>">Email</label>
             </div>
         </div>
@@ -71,16 +74,18 @@ use app\models\Teachers;
                 <div class="btn">
                     <span>Фотография</span>
                     <input type="file" id="teacher-photo">
-                    <input type="hidden" name="image" value="" id="teacher-photo-path">
+                    <input type="hidden" name="image" value="<?= $teacher->image ?>" id="teacher-photo-path">
                 </div>
                 <div class="file-path-wrapper">
                     <input class="file-path validate" type="text" placeholder="Выберите фотографию">
                 </div>
             </div>
             <div class="col s12">
-                <img class="materialboxed article-image" width="200" src="">
+                <img class="materialboxed article-image" width="200" src="<?= $teacher->image ?>">
             </div>
         </div>
+
+
 
         <div class="row">
             <div class="col s12 input-field">
@@ -93,8 +98,8 @@ use app\models\Teachers;
 
                             <div class="row" style="margin-top: 15px">
                                 <div class="input-field col s12">
-                                    <textarea value="Информация" type="text" id="about" name="about" class="materialize-textarea teacher-about-text validate <?= (isset($errors['about'])) ? ' invalid' : '' ?>"> </textarea>
-                                    <label for="about" data-error="<?= (isset($errors['about'])) ? $errors['about'] : '' ?>" data-error="" style="padding-bottom: 10px">Информация</label>
+                                    <textarea type="text" id="about" name="about" class="materialize-textarea teacher-about-text validate <?= (isset($errors['about'])) ? ' invalid' : '' ?>"> <?= $teacher->about ?> </textarea>
+                                    <label for="about" data-error="<?= (isset($errors['about'])) ? $errors['about'] : '' ?>" data-error="" style="padding-bottom: 10px"></label>
                                 </div>
                             </div>
                         </div>
@@ -107,13 +112,14 @@ use app\models\Teachers;
             <div class="col s11 m11 l11 input-field" style="width:630px !important;">
                 <select name="languageId" id="languageId">
                     <?php foreach ($languages AS $language) { ?>
-                        <?php  $selected = ($language->id == $defaultSiteLanguage) ? ' selected ' : '' ?>
+                        <?php  $selected = ($language->id == $teacher->languageId) ? ' selected ' : '' ?>
                         <option value="<?php echo $language->id ?>" <?= $selected ?> > <?php echo $language->name ?></option>
                     <? } ?>
                 </select>
                 <label>Язык</label>
             </div>
         </div>
+
 
         <div class="row">
             <div class="col s12 input-field center" style="margin-top: 30px;">
