--- a/app/views/admin/categories/edit.phtml
+++ b/app/views/admin/categories/edit.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Редактировать категорию
         </h5>
@@ -22,12 +22,12 @@
 
         <div class="row">
             <div class="col s12 input-field">
-                <ul class="collapsible" data-collapsible="accordion" style="width: 640px !important; ">
+                <ul class="collapsible" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header">
                             <i class="material-icons">settings</i>SEO Настройки
                         </div>
-                        <div class="collapsible-body">
+                        <div class="collapsible-body" style="padding-right: 9px; padding-left: 9px;">
                             <div class="row" style="margin-top: 10px">
                                 <div class="input-field col s12">
                                     <input placeholder="SEO Заголовок" id="category-seo-title" name="seoTitle" type="text" class="validate" value="<?= $category->seoTitle ?>">
@@ -53,7 +53,7 @@
         </div>
 
         <div class="row">
-            <div class="col s12 input-field" style="width:660px !important;">
+            <div class="col s12 input-field">
                 <select name="languageId" id="language-id">
                     <?php foreach ($languages AS $language) { ?>
                         <?php  $selected = ($language->id == $category->languageId) ? ' selected ' : '' ?>
