--- a/app/views/admin/contacts/index.phtml
+++ b/app/views/admin/contacts/index.phtml
@@ -1,8 +1,8 @@
 <?php
-use app\models\Contacts;
+    use app\models\Contacts;
 ?>
 <div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Управление контактной иформацией
         </h5>
@@ -15,7 +15,7 @@ use app\models\Contacts;
 
 <div class="row">
     <div class="col s12 m 12 l12">
-        <table class="highlight responsive-table">
+        <table class="highlight">
             <thead>
             <tr>
                 <th data-field="language">Тип</th>
@@ -34,8 +34,8 @@ use app\models\Contacts;
                     </td>
                     <td>
                         <div class="center-align">
-                            <?= $this->tag->linkTo(['#', '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn edit-contact-btn', 'title' => 'Редактировать', 'id' => "$contact->id"]) ?>
-                            <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-contact-btn', 'id' => $contact->id, 'title' => 'Удалить']) ?>
+                            <?= $this->tag->linkTo(['#', '<i class="material-icons">mode_edit</i>', 'class' => 'btn-floating edit-contact-btn', 'title' => 'Редактировать', 'id' => "$contact->id"]) ?>
+                            <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'btn-floating red lighten-1 delete-contact-btn', 'id' => $contact->id, 'title' => 'Удалить']) ?>
                         </div>
                     </td>
                 </tr>
@@ -53,7 +53,7 @@ use app\models\Contacts;
                 <input type="hidden" id="cstat" value="" name="cstat">
 
                 <div class="row">
-                    <div class="col s12 input-field" style="width:660px !important;">
+                    <div class="col s12 input-field">
                         <select name="contactType" id="contactType">
                             <?php foreach ($contactTypes AS $type   =>  $translate) { ?>
                                 <option value="<?= $type     ?>"> <?= $translate ?> </option>
