--- a/app/views/admin/instructors/add.phtml
+++ b/app/views/admin/instructors/add.phtml
@@ -2,7 +2,7 @@
 use app\models\Teachers;
 ?>
 <div class="row">
-    <div class="col s8 m8 l8" style="margin-top: -30px">
+    <div class="col s12 m12 l8 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Добавить нового преподователя/инструктора
         </h5>
@@ -84,7 +84,7 @@ use app\models\Teachers;
 
         <div class="row">
             <div class="col s12 input-field">
-                <ul class="collapsible" data-collapsible="accordion" style="width: 640px !important; ">
+                <ul class="collapsible" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header">
                             <i class="material-icons">settings</i>Дополнительная информация
@@ -94,7 +94,7 @@ use app\models\Teachers;
                             <div class="row" style="margin-top: 15px">
                                 <div class="input-field col s12">
                                     <textarea value="Информация" type="text" id="about" name="about" class="materialize-textarea teacher-about-text validate <?= (isset($errors['about'])) ? ' invalid' : '' ?>"> </textarea>
-                                    <label for="about" data-error="<?= (isset($errors['about'])) ? $errors['about'] : '' ?>" data-error="" style="padding-bottom: 10px">Информация</label>
+                                    <label for="about" data-error="<?= (isset($errors['about'])) ? $errors['about'] : '' ?>" data-error="" style="padding-bottom: 10px"></label>
                                 </div>
                             </div>
                         </div>
@@ -104,7 +104,7 @@ use app\models\Teachers;
         </div>
 
         <div class="row">
-            <div class="col s11 m11 l11 input-field" style="width:630px !important;">
+            <div class="col s11 m11 l11 input-field">
                 <select name="languageId" id="languageId">
                     <?php foreach ($languages AS $language) { ?>
                         <?php  $selected = ($language->id == $defaultSiteLanguage) ? ' selected ' : '' ?>
