--- a/app/views/admin/languages/index.phtml
+++ b/app/views/admin/languages/index.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Управление языками
         </h5>
@@ -11,7 +11,7 @@
 <div class="row">
 
     <div class="col s12 m 12 l12">
-        <table class="highlight responsive-table">
+        <table class="highlight">
             <thead>
             <tr>
                 <th data-field="language">Язык</th>
@@ -34,10 +34,10 @@
                         </td>
                         <td>
                             <div class="left">
-                                <?= $this->tag->linkTo(['languages/edit/', '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn edit-language-btn', 'title' => 'Редактировать', 'id' => "$lang->id"]) ?>
+                                <?= $this->tag->linkTo(['languages/edit/', '<i class="material-icons">mode_edit</i>', 'class' => 'btn-floating edit-language-btn', 'title' => 'Редактировать', 'id' => "$lang->id"]) ?>
                             </div>
                             <div class="right">
-                                <?= $this->tag->linkTo(['languages/delete/'.$lang->id, '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-language-btn', 'id' => $lang->id, 'title' => 'Удалить']) ?>
+                                <?= $this->tag->linkTo(['languages/delete/'.$lang->id, '<i class="material-icons">delete</i>', 'class' => 'btn-floating red lighten-1 delete-language-btn', 'id' => $lang->id, 'title' => 'Удалить']) ?>
                             </div>
                         </td>
                     </tr>
