--- a/app/views/admin/news/index.phtml
+++ b/app/views/admin/news/index.phtml
@@ -2,7 +2,7 @@
  use library\Utils\Slug;
 ?>
 <div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Последние добавленные новости
         </h5>
@@ -15,7 +15,7 @@
 <div class="row">
     <?php if ($news->total_items > 0) { ?>
         <?php foreach ($news->items as $new) { ?>
-            <div class="col s3 l3 m3">
+            <div class="col s6 l4 m3">
                 <div class="card hoverable small">
                     <div class="card-image">
                         <img src="<?= ($new->image != null) ? $new->image : '/img/noimage.png' ?>">
@@ -33,11 +33,10 @@
                             </div>
                             <div class="col s12 m12 l12">
                                 <div class="left">
-                                    <a href="#" class="waves-effect waves-light btn edit-new-btn" id="<?= $new->id ?>" title="Редактировать"><i class="material-icons">mode_edit</i></a>
+                                    <a href="#" class="btn-floating edit-new-btn" id="<?= $new->id ?>" title="Редактировать"><i class="material-icons">mode_edit</i></a>
+                                    <a href="#" class="btn-floating red lighten-1 delete-new-btn" title="Удалить" id="<?= $new->id?>"><i class="material-icons">delete</i></a>
                                 </div>
-                                <div class="right">
-                                    <a href="#" class="waves-effect waves-light btn  red lighten-1 delete-new-btn" title="Удалить" id="<?= $new->id?>"><i class="material-icons">delete</i></a>
-                                </div>
+
                             </div>
                         </div>
 
@@ -118,7 +117,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="col s12 input-field" style="width:660px !important; margin-left: -13px;">
+                    <div class="col s12 input-field">
                         <select name="languageId" id="language-id">
                             <?php foreach ($languages AS $language) { ?>
                                 <?php  $selected = ($language->code == 'ru') ? ' selected ' : '' ?>
@@ -131,12 +130,12 @@
 
                 <div class="row">
                     <div class="col s12 input-field">
-                        <ul class="collapsible" data-collapsible="accordion" style="width: 640px !important; margin-left: -13px">
+                        <ul class="collapsible" data-collapsible="accordion">
                             <li>
                                 <div class="collapsible-header">
                                     <i class="material-icons">settings</i>SEO Настройки
                                 </div>
-                                <div class="collapsible-body">
+                                <div class="collapsible-body" style="padding-left: 9px; padding-right: 9px">
                                     <div class="row" style="margin-top: 10px">
                                         <div class="input-field col s12">
                                             <input placeholder="SEO Заголовок" id="news-seo-title" name="seoTitle" type="text" class="validate">
