--- a/app/views/admin/pages/index.phtml
+++ b/app/views/admin/pages/index.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Страницы
         </h5>
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col s12 m 12 l12">
-        <table class="highlight responsive-table">
+        <table class="highlight">
             <thead>
             <tr>
                 <th data-field="language">Заголовок</th>
@@ -33,9 +33,9 @@
                     </td>
                     <td>
                         <div class="center-align">
-                            <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-page-btn', 'id' => $page->id, 'title' => 'Удалить']) ?>
+                            <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'btn-floating red lighten-1 delete-page-btn', 'id' => $page->id, 'title' => 'Удалить']) ?>
 
-                            <?= $this->tag->linkTo(['/admin/pages/edit/'. $page->id, '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn edit-page-btn', 'title' => 'Редактировать', 'id' => "$page->id"]) ?>
+                            <?= $this->tag->linkTo(['/admin/pages/edit/'. $page->id, '<i class="material-icons">mode_edit</i>', 'class' => 'btn-floating edit-page-btn', 'title' => 'Редактировать', 'id' => "$page->id"]) ?>
                         </div>
                     </td>
                 </tr>
