--- a/app/views/admin/seo/index.phtml
+++ b/app/views/admin/seo/index.phtml
@@ -1,10 +1,10 @@
 <div class="row" style="margin-top: -30px">
-    <div class="col s4 m4 l4">
+    <div class="col s5 m4 l4 push-s1 push-m1 push-l1">
         <h5 class="teal-text">
             SEO настройки сайта
         </h5>
     </div>
-    <div class="col s2 m2 l2">
+    <div class="col s3 m3 l3 push-s4 push-m2 push-l2">
         <select id="site-seo-settings-language">
             <?php foreach ($languages AS $language) { ?>
                 <?php $selected = ($language->id == $languageId) ? ' selected ' : '' ?>
@@ -72,7 +72,7 @@
     <div class="col s10 m10 l10">
         <form id="default-site-language-form" action="#" method="POST" class="col s12 m12 l12">
             <div class="row">
-                <div class="col s12 input-field" style="width:660px !important;">
+                <div class="col s12 input-field">
                     <select name="languageId" id="site-language-id">
                         <?php foreach ($languages AS $language) { ?>
                             <?php  $selected = ($language->id == $defaultSiteLanguage) ? ' selected ' : '' ?>
