--- a/app/views/admin/users/index.phtml
+++ b/app/views/admin/users/index.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s6 m6 l6" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
         <h5 class="teal-text">
             Управление пользователями
         </h5>
@@ -9,7 +9,6 @@
     </div>
 </div>
 <div class="row">
-
     <div class="col s12 m 12 l12">
         <table class="highlight responsive-table">
             <thead>
@@ -36,19 +35,14 @@
                         <?= $user->email ?>
                     </td>
                     <td>
-                        <div class="left">
-                            <?= $this->tag->linkTo(['#', '<i class="material-icons">mode_edit</i>', 'class' => 'waves-effect waves-light btn edit-user-btn', 'title' => 'Редактировать', 'id' => "$user->id"]) ?>
-                        </div>
-                        <div class="right">
-                            <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'waves-effect waves-light btn  red lighten-1 delete-user-btn', 'id' => $user->id, 'title' => 'Удалить']) ?>
-                        </div>
+                        <?= $this->tag->linkTo(['#', '<i class="material-icons">mode_edit</i>', 'class' => 'btn-floating edit-user-btn', 'title' => 'Редактировать', 'id' => "$user->id"]) ?>
+                        <?= $this->tag->linkTo(['#', '<i class="material-icons">delete</i>', 'class' => 'btn-floating red lighten-1 delete-user-btn', 'id' => $user->id, 'title' => 'Удалить']) ?>
                     </td>
                 </tr>
             <?php } ?>
             </tbody>
         </table>
     </div>
-
 </div>
 
 <div id="add-user-modal" class="modal">
@@ -92,13 +86,6 @@
                 </div>
             </div>
             <?= \Phalcon\Tag::endForm(); ?>
-        </div>
-        <div class="row">
-            <div class="col s12 validation-errors">
-                <ul>
-
-                </ul>
-            </div>
         </div>
     </div>
 </div>
