--- a/app/views/admin/languages/index.phtml
+++ b/app/views/admin/languages/index.phtml
@@ -1,10 +1,10 @@
 <div class="row">
-    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
+    <div class="col s5 m5 l5 push-s1 push-m1 push-l1">
         <h5 class="teal-text">
             Управление языками
         </h5>
     </div>
-    <div class="col s6 m6 l6 right-align" style="margin-top: -26px">
+    <div class="col s6 m6 l6 right-align">
         <a class="btn-floating btn-large waves-effect waves-light red modal-trigger add-language-modal" href="#add-news-modal"><i class="material-icons">add</i></a>
     </div>
 </div>
