another adaptive layout fixes

--- a/app/views/admin/seo/index.phtml
+++ b/app/views/admin/seo/index.phtml
@@ -1,5 +1,5 @@
 <div class="row" style="margin-top: -30px">
-    <div class="col s5 m4 l4 push-s1 push-m1 push-l1">
+    <div class="col s5 m4 l4 push-s1 push-m1">
         <h5 class="teal-text">
             SEO настройки сайта
         </h5>
