--- a/app/views/admin/contacts/index.phtml
+++ b/app/views/admin/contacts/index.phtml
@@ -2,7 +2,7 @@
     use app\models\Contacts;
 ?>
 <div class="row">
-    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
+    <div class="col s5 m5 l6 push-s1 push-m1" style="margin-top: -30px">
         <h5 class="teal-text">
             Управление контактной иформацией
         </h5>
