--- a/app/views/admin/languages/index.phtml
+++ b/app/views/admin/languages/index.phtml
@@ -1,10 +1,10 @@
 <div class="row">
-    <div class="col s5 m5 l5 push-s1 push-m1 push-l1">
+    <div class="col s5 m5 l6" style="margin-top: -30px">
         <h5 class="teal-text">
             Управление языками
         </h5>
     </div>
-    <div class="col s6 m6 l6 right-align">
+    <div class="col s6 m6 l6 right-align" style="margin-top: -26px">
         <a class="btn-floating btn-large waves-effect waves-light red modal-trigger add-language-modal" href="#add-news-modal"><i class="material-icons">add</i></a>
     </div>
 </div>
@@ -33,12 +33,8 @@
                             <?= $lang->visible ?>
                         </td>
                         <td>
-                            <div class="left">
-                                <?= $this->tag->linkTo(['languages/edit/', '<i class="material-icons">mode_edit</i>', 'class' => 'btn-floating edit-language-btn', 'title' => 'Редактировать', 'id' => "$lang->id"]) ?>
-                            </div>
-                            <div class="right">
-                                <?= $this->tag->linkTo(['languages/delete/'.$lang->id, '<i class="material-icons">delete</i>', 'class' => 'btn-floating red lighten-1 delete-language-btn', 'id' => $lang->id, 'title' => 'Удалить']) ?>
-                            </div>
+                            <?= $this->tag->linkTo(['languages/edit/', '<i class="material-icons">mode_edit</i>', 'class' => 'btn-floating edit-language-btn', 'title' => 'Редактировать', 'id' => "$lang->id"]) ?>
+                            <?= $this->tag->linkTo(['languages/delete/'.$lang->id, '<i class="material-icons">delete</i>', 'class' => 'btn-floating red lighten-1 delete-language-btn', 'id' => $lang->id, 'title' => 'Удалить']) ?>
                         </td>
                     </tr>
                 <?php } ?>
