--- a/app/views/admin/news/index.phtml
+++ b/app/views/admin/news/index.phtml
@@ -2,12 +2,12 @@
  use library\Utils\Slug;
 ?>
 <div class="row">
-    <div class="col s5 m5 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
+    <div class="col s5 m7 l6 push-s1 push-m1 " style="margin-top: -30px">
         <h5 class="teal-text">
             Последние добавленные новости
         </h5>
     </div>
-    <div class="col s6 m6 l6 right-align" style="margin-top: -26px">
+    <div class="col s6 m4 l6 right-align" style="margin-top: -26px">
         <a class="btn-floating btn-large waves-effect waves-light red modal-trigger add-news-modal" href="#add-news-modal"><i class="material-icons">add</i></a>
     </div>
 </div>
