--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -1,16 +1,21 @@
+<?php
+    use library\Components\TopPageNavigationComponent;
+    use library\Components\TopLineComponent;
+?>
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+
     <title>DeLanaAuto - Autoskola Daugavpilī</title>
 
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <?php $this->assets->outputCss() ?>
     <?php $this->assets->outputJs() ?>
 
@@ -18,47 +23,13 @@
 
 <body>
 
-<ul id="header-menu-dropdown" class="dropdown-content">
-    <li><a href="#!">Преподователи</a></li>
-    <li><a href="#!">Инструкторы</a></li>
-</ul>
+<? (new TopLineComponent())->getContent() ?>
 
-<nav class="light-blue lighten-1 top-page-navigation" role="navigation">
-    <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">
-            <img class="responsive-img" src="img/logo.png" >
-        </a>
+<?= (new TopPageNavigationComponent())->getContent(); ?>
 
-        <ul class="right hide-on-med-and-down">
-            <li><?= $this->tag->linkTo('contacts/index', 'Контакты')?> </li>
-        </ul>
-        <ul class="right hide-on-med-and-down">
-            <li><a href="#">Полезная информация</a></li>
-        </ul>
-        <ul class="right hide-on-med-and-down">
-            <li><a href="#">Обучение</a></li>
-        </ul>
-        <ul class="right hide-on-med-and-down">
-            <li>
-                <a class="dropdown-button" href="#" data-activates="header-menu-dropdown">
-                    О нас<i class="material-icons right">arrow_drop_down</i>
-                </a>
-            </li>
-        </ul>
-        <ul class="right hide-on-med-and-down">
-            <li><a href="#">Новости</a></li>
-        </ul>
-
-        <ul id="nav-mobile" class="side-nav">
-            <li><a href="#">Navbar Link</a></li>
-        </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    </div>
-</nav>
-
-    <div class="container">
-            <?= $this->getContent() ?>
-    </div>
+<div class="container">
+    <?= $this->getContent() ?>
+</div>
 
 <footer class="page-footer orange">
     <div class="container">
