--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -23,10 +23,23 @@
 
 <body>
 
-<? (new TopLineComponent())->getContent() ?>
-
 <?= (new TopPageNavigationComponent())->getContent(); ?>
-
+<div class="section no-pad-bot main-page-big-container" id="index-banner">
+    <div class="container">
+        <br><br>
+        <div class="row center">
+            <a href="#" id="app-for-course" class="btn-large waves-effect waves-light red">Подать заявку</a>
+            <a href="#" id="review-button" class="btn-large waves-effect waves-light light-blue">Оставить отзыв</a>
+        </div>
+        <br><br>
+        <div class="row center ">
+            <h5 class="header col s12 white-text lighten-2 left arrow_box">
+                Запишись прямо сейчас и пройди лучший курс теоретического и практического обучения в автошколе De Lana Auto
+            </h5>
+        </div>
+        <br><br>
+    </div>
+</div>
 <div class="container">
     <?= $this->getContent() ?>
 </div>
