--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -2,7 +2,9 @@
     use library\Widgets\TopPageNavigationWidget;
     use library\Widgets\MainPageBannerWidget;
     use library\Widgets\FooterContactWidget;
+    use library\Widgets\SidebarCategoriesWidget;
 ?>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,11 +28,24 @@
 
 <?= (new TopPageNavigationWidget())->getWidget(); ?>
 
-<?= (new MainPageBannerWidget())->getWidget() ?>
+<?= (new MainPageBannerWidget())->getWidget(); ?>
 
-<div class="container">
-    <?= $this->getContent() ?>
+<div class="section no-pad-bot">
+    <div class="row">
+        <div class="col s12 m3 l3">
+            <?= (new SidebarCategoriesWidget())->getWidget(); ?>
+        </div>
+        <div class="col s12 m9 l9"  style="border-left: 1px solid lightgrey">
+            <div class="row">
+                <div class="col s12 m12 l12 center-align">
+                    <h5 id="category-title">Новости</h5>
+                </div>
+            </div>
+            <?= $this->getContent() ?>
+        </div>
+    </div>
 </div>
+
 
 <footer class="page-footer orange">
     <div class="container">
