--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -3,28 +3,34 @@
     <div class="section">
         <div class="row">
             <div class="news-image col s3 m3 l3">
-                <img class="responsive-img" src="<?= $new->image ?>">
+                <img class="responsive-img" src="<?= $new->image ?>" alt="<?= $new->title ?>" title="<?= $new->title ?>">
             </div>
             <div class="news-content col s9 m9 l9">
                 <div class="row">
+                    <div class="col s12 m6 l6">
+                        <div class="valign-wrapper">
+                            <i class="material-icons">schedule</i> &nbsp;
+                            <span class="valign">
+                                <?= $new->dateAdded ?>
+                            </span>
+                        </div>
+                    </div>
                     <div class="col s12 m12 l12">
-                        <h3>
-                            <?= $new->title ?>
-                        </h3>
+                        <h4>
+                            <?= $this->tag->linkTo([$new->getLink(), $new->title , 'title' => "$new->title"]) ?>
+                        </h4>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col s12 m12 l12 news-description">
-                        <?= $new->shortDescription ?>
+                        <?= $new->shortDescription ?> ...
                     </div>
                 </div>
                 <div class="row news-sub-content">
                     <div class="col s6 m6 l6 news-read-button">
                         <?= $this->tag->linkTo([$new->getLink(), 'Читать всю новость', 'title' => "$new->title", 'class' => 'waves-effect light-blue lighten-1 btn']) . '<br><br>' ?>
                     </div>
-                    <div class="col s6 m6 l6 news-date-added">
-                        <?= $new->dateAdded ?>  <i class="material-icons ">schedule</i>
-                    </div>
+
                 </div>
             </div>
         </div>
