--- a/app/views/widgets/mainpage/main_page_banner.phtml
+++ b/app/views/widgets/mainpage/main_page_banner.phtml
@@ -1,4 +1,4 @@
-<div class="section no-pad-bot main-page-big-container" id="index-banner">
+<div class="section no-pad-bot main-page-big-container">
     <div class="container">
         <br><br>
         <div class="row center">
