News/Category/Pages controllers/ read actions Bug fixes Some rafactor

--- a/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
+++ b/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
@@ -1,7 +1,7 @@
 <!-- START OF DROPDOWNS CONTENT -->
 <ul id="header-menu-dropdown" class="dropdown-content">
     <li>
-        <?= $this->tag->linkTo('/teachers', 'Преподаватели' ) ?>
+        <?= $this->tag->linkTo('/lecturers', 'Преподаватели' ) ?>
     </li>
     <li>
         <?= $this->tag->linkTo('/instructors', 'Инструкторы' ) ?>
@@ -47,8 +47,8 @@
 <nav class="white" role="navigation" style="margin-bottom: 5px">
     <a href="#" data-activates="nav-mobile" style="color: grey;" class="button-collapse"><i class="material-icons">menu</i></a>
     <div class="nav-wrapper container">
-        <a href="#" class="brand-logo center-align">
-            <img class="responsive-img" id="logo-container" src="img/logo2.jpg" >
+        <a href="/" class="brand-logo center-align">
+            <img class="responsive-img" id="logo-container" src="/img/logo2.jpg" >
         </a>
 
         <ul class="hide-on-med-and-down right">
