--- a/app/views/index/index.phtml
+++ b/app/views/index/index.phtml
@@ -1,9 +1,16 @@
-
+<div class="row">
+    <div class="col s12 m12 l12 center-align">
+        <h5 id="category-title">Новости</h5>
+    </div>
+</div>
 <? foreach ($news->items as $new) {?>
     <div class="section">
         <div class="row">
             <div class="news-image col s3 m3 l3">
-                <img class="responsive-img" src="<?= $new->image ?>" alt="<?= $new->title ?>" title="<?= $new->title ?>">
+                <?php if (!empty($new->image)) { ?>
+                        <img class="responsive-img" src="<?= $new->image ?>" alt="<?= $new->title ?>" title="<?= $new->title ?>">
+
+                <?php } ?>
             </div>
             <div class="news-content col s9 m9 l9">
                 <div class="row">
