AboutController. Instructors/Lecturers/Categories pages. Bug Fixes

--- a/app/views/admin/instructors/edit.phtml
+++ b/app/views/admin/instructors/edit.phtml
@@ -10,7 +10,7 @@
 </div>
 <hr>
 <div class="row">
-    <form class="col s12 add-news-form" action="/admin/instructors/edit" method="post">
+    <form class="col s12 add-news-form" action="/admin/instructors/edit/<?= $teacher->id ?>" method="post">
         <input type="hidden" id="tstat" value="" name="tstat">
 
         <div class="row" style="margin-bottom: 50px">
