--- a/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
+++ b/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
@@ -1,10 +1,10 @@
 <!-- START OF DROPDOWNS CONTENT -->
 <ul id="header-menu-dropdown" class="dropdown-content">
     <li>
-        <?= $this->tag->linkTo('/lecturers', 'Преподаватели' ) ?>
+        <?= $this->tag->linkTo('/about/lecturers', 'Преподаватели' ) ?>
     </li>
     <li>
-        <?= $this->tag->linkTo('/instructors', 'Инструкторы' ) ?>
+        <?= $this->tag->linkTo('/about/instructors', 'Инструкторы' ) ?>
     </li>
 </ul>
 
