application for courses done. Need to add category validation

--- a/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
+++ b/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
@@ -44,7 +44,7 @@
 </ul>
 <!-- END OF DROPDOWNS CONTENT -->
 
-<nav class="white" role="navigation" style="margin-bottom: 5px">
+<nav class="white" role="navigation" >
     <a href="#" data-activates="nav-mobile" style="color: grey;" class="button-collapse"><i class="material-icons">menu</i></a>
     <div class="nav-wrapper container">
         <a href="/" class="brand-logo center-align">
