--- a/app/views/widgets/mainpage/main_page_banner.phtml
+++ b/app/views/widgets/mainpage/main_page_banner.phtml
@@ -2,7 +2,7 @@
     <div class="container">
         <br><br>
         <div class="row center">
-            <a href="#" id="app-for-course" class="btn-large waves-effect waves-light red">Подать заявку</a>
+            <a href="/contacts/course" id="app-for-course" class="btn-large waves-effect waves-light red">Подать заявку</a>
             <a href="#" id="review-button" class="btn-large waves-effect waves-light light-blue">Оставить отзыв</a>
         </div>
         <br><br>
