--- a/app/views/feedback/index.phtml
+++ b/app/views/feedback/index.phtml
@@ -1,8 +1,6 @@
 <div class="row">
-    <div class="col s8 m8 l8 center-align">
-        <h5 class="left-align" id="category-title">
-            Запишитесь на курсы
-        </h5>
+    <div class="col s8 m8 l8 left-align">
+        <h5 id="category-title">Оставьте свой отзыв</h5>
     </div>
     <div class="col s4 m4 l4">
         <?php if (isset($success)) { ?>
@@ -12,8 +10,9 @@
         <?php } ?>
     </div>
 </div>
+
 <div class="row">
-    <form class="col s12 m12 l12" method="post" action="/contacts/course">
+    <form class="col s12 m12 l12" method="post" action="/feedback/send">
         <div class="row">
             <div class="input-field col s6 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
@@ -28,34 +27,17 @@
         </div>
 
         <div class="row" style="margin-bottom: 30px">
-            <div class="input-field col s6 m6 l6">
+            <div class="input-field col s12 m12 l12">
                 <i class="material-icons prefix">email</i>
                 <input id="email" type="email" name="email" class="validate <?= (isset($errors['email'])) ? ' invalid' : '' ?>">
                 <label for="email"  data-error="<?= $errors['email'] ?? '' ?>">Email</label>
-            </div>
-            <div class="input-field col s6 m6 l6">
-                <i class="material-icons prefix">phone</i>
-                <input id="phone" type="tel" name="phone" class="validate <?= (isset($errors['phone'])) ? ' invalid' : '' ?>">
-                <label for="phone" data-error="<?= $errors['phone'] ?? '' ?>">Телефон</label>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="input-field col s12 m12 l12">
-                <select name="categoryId" required>
-                    <option value="-1" disabled selected> - Категория - </option>
-                    <?php foreach ($categories as $category) { ?>
-                        <option value="<?= $category->id ?>"><?= $category->title ?></option>
-                    <?php } ?>
-                </select>
-                <label>Выберите категорию</label>
             </div>
         </div>
 
         <div class="row">
             <div class="input-field col s12 m12 l12">
                 <textarea id="comment" name="comment" class="materialize-textarea validate <?= (isset($errors['comment'])) ? ' invalid' : '' ?>"></textarea>
-                <label for="comment"  data-error="<?= $errors['comment'] ?? '' ?>">Коментарий</label>
+                <label for="comment"  data-error="<?= $errors['comment'] ?? '' ?>">Сообщение</label>
             </div>
         </div>
         <div class="row">
