--- a/app/views/admin/pages/index.phtml
+++ b/app/views/admin/pages/index.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s5 m5 l6 push-s1 push-m1">
+    <div class="col s5 m5 l6 push-s1 push-m1" style="margin-top: -30px">
         <h5 class="teal-text">
             Страницы
         </h5>
