--- a/app/views/feedback/all.phtml
+++ b/app/views/feedback/all.phtml
@@ -1,23 +1,25 @@
-<?php if (isset($success)) { ?>
-    <script>
-        Materialize.toast("<?= $success ?>", 4000);
-    </script>
-<?php } ?>
 <div class="row">
     <div class="col s8 m8 l8 left-align">
         <h5 id="category-title">Оставьте свой отзыв</h5>
+    </div>
+    <div class="col s4 m4 l4">
+        <?php if (isset($success)) { ?>
+            <script>
+                Materialize.toast("<?= $success ?>", 4000);
+            </script>
+        <?php } ?>
     </div>
 </div>
 
 <div class="row">
     <form class="col s12 m12 l12" method="post" action="/feedback/send">
         <div class="row">
-            <div class="input-field col s12 m6 l6">
+            <div class="input-field col s6 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
                 <input id="firstname" type="text" name="firstname" class="validate <?= (isset($errors['firstname'])) ? ' invalid' : '' ?>">
                 <label for="firstname" data-error="<?= $errors['firstname'] ?? '' ?>">Имя</label>
             </div>
-            <div class="input-field col s12 m6 l6">
+            <div class="input-field col s6 m6 l6">
                 <i class="material-icons prefix">account_circle</i>
                 <input id="lastname" type="text" name="lastname" class="validate <?= (isset($errors['lastname'])) ? ' invalid' : '' ?>">
                 <label for="lastname" data-error="<?= $errors['lastname'] ?? '' ?>">Фамилия</label>
@@ -39,16 +41,33 @@
             </div>
         </div>
         <div class="row">
-            <div class="col s8 m8 l8 input-field">
+            <div class="col s12 input-field">
                 <button class="btn waves-effect waves-light light-blue" type="submit">
                     Оставить отзыв<i class="material-icons right">send</i>
                 </button>
             </div>
-            <div class="col s4 m4 l4 left-align input-field">
-                <a href="/feedback/all#feedback-list" class="btn waves-effect waves-light blue cyan lighten-2">
-                    Читать все отзывы <i class="material-icons right">comment</i>
-                </a>
-            </div>
         </div>
     </form>
+</div>
+<div class="row" id="feedback-list">
+    <?php if (count($feedbackMessages) > 0) { ?>
+        <?php foreach ($feedbackMessages as $feedbackMessage) { ?>
+            <div class="row">
+                <div class="col s12 m9 l9">
+                    <div class="card-panel hoverable">
+                        <span class="card-title feedback-firstname">
+                           <?= $feedbackMessage->firstname ?>
+                        </span>
+                        <span class="card-title feedback-date">
+                            <?= $feedbackMessage->commentDate ?>
+                        </span>
+                        <br> <br>
+                        <span class="card-title">
+                            <?= $feedbackMessage->comment ?>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        <?php } ?>
+    <?php } ?>
 </div>
