working with widgets

--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -1,7 +1,7 @@
 <?php
     use library\Widgets\TopPageNavigationWidget;
     use library\Widgets\MainPageBannerWidget;
-    use library\Widgets\FooterContactWidget;
+    use library\Widgets\FooterContentWidget;
     use library\Widgets\SidebarCategoriesWidget;
 ?>
 
@@ -41,37 +41,7 @@
     </div>
 </div>
 
-<footer class="page-footer orange">
-    <div class="container">
-        <div class="row">
-            <div class="col l6 s12">
-                <?= (new FooterContactWidget())->getWidget(); ?>
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Settings</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-copyright">
-        <div class="container">
-            Made by <a class="orange-text text-lighten-3" href="https://www.facebook.com/Maris.Vigulis">Maris Vigulis</a>
-        </div>
-    </div>
-</footer>
+<?= (new FooterContentWidget())->getWidget() ?>
+
 </body>
 </html>
