--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,3 +196,7 @@ nav > div > ul > li > a{
     padding-left: 3px;
     border-bottom: 1px dotted lightgrey
 }
+
+#feedback-message {
+    border-left: 1px dotted red;
+}
