working with widgets

--- a/app/views/widgets/footer/footer_contact.phtml
+++ b/app/views/widgets/footer/footer_contact.phtml
@@ -2,8 +2,8 @@
 use app\models\Contacts;
 ?>
 
-<h5 class="white-text">"De Lana Auto"</h5>
-<p class="grey-text text-lighten-4">
+<h5 class="black-text">"De Lana Auto"</h5>
+<p class="black-text text-lighten-4">
 
     <?php if ($hasContactsData) { ?>
 
