--- a/app/views/widgets/footer/footer_content.phtml
+++ b/app/views/widgets/footer/footer_content.phtml
@@ -2,23 +2,14 @@
 use library\Widgets\FooterContactWidget;
 use library\Widgets\FooterFeedbackWidget;
 ?>
-<footer class="page-footer light-blue lighten-2">
+<footer class="page-footer white" style="background-color: #f9f9f9;">
     <div class="container">
         <div class="row">
-            <div class="col l6 s12">
+            <div class="col s12 m6 l6 ">
                 <?= (new FooterContactWidget())->getWidget(); ?>
             </div>
-            <div class="col l3 s12" id="feedback-message">
+            <div class="col s12 m6 l6" id="feedback-message">
                 <?= (new FooterFeedbackWidget())->getWidget()?>
-            </div>
-            <div class="col l3 s12">
-                <h5 class="white-text">Connect</h5>
-                <ul>
-                    <li><a class="white-text" href="#!">Link 1</a></li>
-                    <li><a class="white-text" href="#!">Link 2</a></li>
-                    <li><a class="white-text" href="#!">Link 3</a></li>
-                    <li><a class="white-text" href="#!">Link 4</a></li>
-                </ul>
             </div>
         </div>
     </div>
