--- a/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
+++ b/app/views/widgets/mainpage/navigation/top_page_navigation.phtml
@@ -35,11 +35,15 @@
 
 <ul id="top-header-menu-languages-dropdown" class="dropdown-content">
     <?php foreach ($languages as $language) { ?>
-        <li>
-            <a href="<?= $language['href'] ?>">
-                <?= $language['name'] ?> <img src="<?= $language['img'] ?>">
-            </a>
-        </li>
+        <?php if ($language['name'] != '-- Все --') { ?>
+
+            <li>
+                <a href="<?= $language['href'] ?>">
+                    <?= $language['name'] ?> <img src="<?= $language['img'] ?>">
+                </a>
+            </li>
+
+        <?php } ?>
     <?php } ?>
 </ul>
 <!-- END OF DROPDOWNS CONTENT -->
