--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -2,7 +2,7 @@
     use library\Widgets\TopPageNavigationWidget;
     use library\Widgets\MainPageBannerWidget;
     use library\Widgets\FooterContentWidget;
-    use library\Widgets\SidebarCategoriesWidget;
+    use library\Widgets\SidebarWidget;
 ?>
 
 <!DOCTYPE html>
@@ -14,8 +14,8 @@
 
     <title>DeLanaAuto - Autoskola Daugavpilī</title>
 
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -32,16 +32,14 @@
 
 <div class="section no-pad-bot">
     <div class="row">
-        <div class="col s12 m3 l3">
-            <?= (new SidebarCategoriesWidget())->getWidget(); ?>
+        <div class="col s12 m3 l3" style="border-right: 1px solid lightgrey">
+           <?= (new SidebarWidget())->getWidget() ?>
         </div>
-        <div class="col s12 m9 l9"  style="border-left: 1px solid lightgrey">
+        <div class="col s12 m9 l9">
             <?= $this->getContent() ?>
         </div>
     </div>
 </div>
-
-<?= (new FooterContentWidget())->getWidget() ?>
-
+    <?= (new FooterContentWidget())->getWidget() ?>
 </body>
 </html>
