--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,7 +105,7 @@ nav > div > ul > li > a{
 }
 
 .main-page-big-container {
-    background-image: url("/img/driver2.jpg");
+    background-image: url("/img/driver2-1.jpg");
     background-size: 100% auto;
     background-repeat: no-repeat;
 }
