--- a/app/views/admin/instructors/add.phtml
+++ b/app/views/admin/instructors/add.phtml
@@ -2,7 +2,7 @@
 use app\models\Teachers;
 ?>
 <div class="row">
-    <div class="col s12 m12 l8 push-s1 push-m1 push-l1" style="margin-top: -30px">
+    <div class="col s12 m12 l8 push-s1 push-m1" style="margin-top: -30px">
         <h5 class="teal-text">
             Добавить нового преподователя/инструктора
         </h5>
