Translate adapter done

--- a/app/views/admin/layouts/admin.phtml
+++ b/app/views/admin/layouts/admin.phtml
@@ -36,6 +36,8 @@
             <li> <?= $this->tag->linkTo('admin/polls', 'Опросы <i class="material-icons">description</i>');?></li>
             <li> <?= $this->tag->linkTo('admin/contacts', 'Контакты <i class="material-icons">settings_phone</i>')?> </li>
             <li> <?= $this->tag->linkTo('admin/users', 'Администраторы  <i class="material-icons">info</i>')?> </li>
+            <li> <?= $this->tag->linkTo('admin/translate', 'Переводы <i class="material-icons">translate</i>');?></li>
+
         </ul>
 
         <ul class="hide-on-med-and-down hide">
